--- a/ReviewSentiment.ipynb
+++ b/ReviewSentiment.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -113,34 +113,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "BernoulliNB(alpha=1.0, binarize=0.0, class_prior=None, fit_prior=True)"
+       "MultinomialNB(alpha=1.0, class_prior=None, fit_prior=True)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.naive_bayes import BernoulliNB\n",
+    "from sklearn.naive_bayes import MultinomialNB, GaussianNB\n",
     "\n",
     "log_classifier = LogisticRegression()\n",
     "log_classifier.fit(X_train, training['labels'])\n",
     "\n",
-    "bayes_classifier = BernoulliNB()\n",
+    "bayes_classifier = MultinomialNB()\n",
     "bayes_classifier.fit(X_train, training['labels'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -148,9 +148,9 @@
      "output_type": "stream",
      "text": [
       "Logistic Regression:  80.0 %\n",
-      "Bayes Classifier:  80.8333333333 %\n",
+      "Bayes Classifier:  79.6666666667 %\n",
       "\n",
-      "The Bayes Classifier does slightly better!\n"
+      "The LR Classifier does slightly better!\n"
      ]
     }
    ],
@@ -169,7 +169,69 @@
     "print(\"Logistic Regression: \", log_classifier.score(X_test, testing['labels'])*100, '%')\n",
     "print(\"Bayes Classifier: \", bayes_classifier.score(X_test, testing['labels'])*100, '%')\n",
     "\n",
-    "print(\"\\nThe Bayes Classifier does slightly better!\")"
+    "print(\"\\nThe LR Classifier does slightly better!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Top Negative Words in order\n",
+      "['bad', 'wast', 'poor', 'worst', 'disappoint', 'terrible', 'suck', 'dont', 'horrible', 'didnt']\n",
+      "\n",
+      "Top Positive Words in order\n",
+      "['awesome', 'amazing', 'best', 'price', 'delicious', 'nice', 'excel', 'good', 'love', 'great']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# [log_classifier.coef_.argsort()]\n",
+    "sorted_features = np.array(unique_words)[log_classifier.coef_.argsort()].tolist()[0]\n",
+    "\n",
+    "print(\"Top Negative Words in order\")\n",
+    "print(sorted_features[:10])\n",
+    "\n",
+    "print(\"\\nTop Positive Words in order\")\n",
+    "print(sorted_features[-10:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Logistic Regression\n",
+      "[[234  66]\n",
+      " [ 54 246]]\n",
+      "\n",
+      "Naive Bayes\n",
+      "[[239  61]\n",
+      " [ 61 239]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import confusion_matrix\n",
+    "\n",
+    "prediction = log_classifier.predict(X_test)\n",
+    "a = confusion_matrix(testing['labels'], prediction)\n",
+    "\n",
+    "prediction = bayes_classifier.predict(X_test)\n",
+    "b = confusion_matrix(testing['labels'], prediction)\n",
+    "\n",
+    "print(\"Logistic Regression\")\n",
+    "print(a)\n",
+    "print(\"\\nNaive Bayes\")\n",
+    "print(b)"
    ]
   },
   {
@@ -181,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +279,7 @@
      "output_type": "stream",
      "text": [
       "Logistic Regression:  73.8333333333 %\n",
-      "Bayes Classifier:  77.1666666667 %\n",
+      "Bayes Classifier:  77.3333333333 %\n",
       "\n",
       "The Bayes Classifier does slightly better!\n"
      ]
@@ -233,6 +295,67 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Top Negative Bigrams in order\n",
+      "['the worst', 'would not', 'very disappointed', 'do not', 'piece of', 'minute s', 'was terrible', 'not recommend', 's no', 'very bad']\n",
+      "\n",
+      "Top Positive Bigrams in order\n",
+      "['play e', 'great phone', 'love this', 'i love', 'love d', 'highly recommend', 'very good', 'the best', 'a great', 'works great']\n"
+     ]
+    }
+   ],
+   "source": [
+    "sorted_bigrams = np.array(unique_bigrams)[log_classifier.coef_.argsort()[0]].tolist()\n",
+    "sorted_bigrams = [' '.join(bigram) for bigram in sorted_bigrams]\n",
+    "print(\"Top Negative Bigrams in order\")\n",
+    "print(sorted_bigrams[:10])\n",
+    "\n",
+    "print(\"\\nTop Positive Bigrams in order\")\n",
+    "print(sorted_bigrams[-10:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Logistic Regression\n",
+      "[[236  64]\n",
+      " [ 93 207]]\n",
+      "\n",
+      "Naive Bayes\n",
+      "[[236  64]\n",
+      " [ 72 228]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import confusion_matrix\n",
+    "\n",
+    "prediction = log_classifier.predict(X_test2)\n",
+    "a = confusion_matrix(testing['labels'], prediction)\n",
+    "\n",
+    "prediction = bayes_classifier.predict(X_test2)\n",
+    "b = confusion_matrix(testing['labels'], prediction)\n",
+    "\n",
+    "print(\"Logistic Regression\")\n",
+    "print(a)\n",
+    "print(\"\\nNaive Bayes\")\n",
+    "print(b)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -241,19 +364,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "centered:  (2400, 3336)\n",
-      "cov:  (3336, 3336)\n",
-      "reconstruction:  (600, 10)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "from numpy.linalg import svd, eigh\n",
@@ -281,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {
     "scrolled": false
    },
@@ -292,87 +405,46 @@
      "text": [
       "Bag of Words\n",
       "\n",
-      "centered:  (2400, 3336)\n",
-      "cov:  (3336, 3336)\n",
       "\n",
       "10-order approximation\n",
       "\n",
-      "Logistic Regression:  49.5 %\n",
-      "Bayes Classifier:  48.3333333333 %\n",
+      "Logistic Regression:  51.1666666667 %\n",
+      "Bayes Classifier:  56.5 %\n",
       "\n",
       "50-order approximation\n",
       "\n",
-      "Logistic Regression:  57.1666666667 %\n",
-      "Bayes Classifier:  58.0 %\n",
+      "Logistic Regression:  55.1666666667 %\n",
+      "Bayes Classifier:  57.8333333333 %\n",
       "\n",
       "100-order approximation\n",
       "\n",
-      "Logistic Regression:  61.5 %\n",
-      "Bayes Classifier:  65.5 %\n",
-      "\n",
-      "500-order approximation\n",
-      "\n",
-      "Logistic Regression:  70.1666666667 %\n",
-      "Bayes Classifier:  66.1666666667 %\n",
-      "\n",
-      "1000-order approximation\n",
-      "\n",
-      "Logistic Regression:  71.3333333333 %\n",
-      "Bayes Classifier:  67.5 %\n",
-      "\n",
-      "2000-order approximation\n",
-      "\n",
-      "Logistic Regression:  77.6666666667 %\n",
-      "Bayes Classifier:  69.5 %\n",
-      "\n",
-      "3000-order approximation\n",
-      "\n",
-      "Logistic Regression:  79.3333333333 %\n",
-      "Bayes Classifier:  69.6666666667 %\n",
+      "Logistic Regression:  57.0 %\n",
+      "Bayes Classifier:  60.0 %\n",
       "Bigrams\n",
       "\n",
-      "centered:  (2400, 17480)\n",
-      "cov:  (17480, 17480)\n",
       "\n",
       "10-order approximation\n",
       "\n",
-      "Logistic Regression:  54.1666666667 %\n",
-      "Bayes Classifier:  50.6666666667 %\n",
+      "Logistic Regression:  51.5 %\n",
+      "Bayes Classifier:  52.3333333333 %\n",
       "\n",
       "50-order approximation\n",
       "\n",
-      "Logistic Regression:  52.5 %\n",
-      "Bayes Classifier:  53.6666666667 %\n",
+      "Logistic Regression:  54.0 %\n",
+      "Bayes Classifier:  54.0 %\n",
       "\n",
       "100-order approximation\n",
       "\n",
-      "Logistic Regression:  54.1666666667 %\n",
-      "Bayes Classifier:  51.8333333333 %\n",
-      "\n",
-      "500-order approximation\n",
-      "\n",
-      "Logistic Regression:  59.0 %\n",
-      "Bayes Classifier:  52.8333333333 %\n",
-      "\n",
-      "1000-order approximation\n",
-      "\n",
-      "Logistic Regression:  61.5 %\n",
-      "Bayes Classifier:  57.3333333333 %\n",
-      "\n",
-      "2000-order approximation\n",
-      "\n",
-      "Logistic Regression:  66.5 %\n",
-      "Bayes Classifier:  61.6666666667 %\n",
-      "\n",
-      "3000-order approximation\n",
-      "\n",
-      "Logistic Regression:  70.8333333333 %\n",
-      "Bayes Classifier:  64.0 %\n"
+      "Logistic Regression:  56.1666666667 %\n",
+      "Bayes Classifier:  54.8333333333 %\n"
      ]
     }
    ],
    "source": [
-    "dimensions = [10, 50, 100, 500, 1000, 2000, 3000]\n",
+    "from sklearn.naive_bayes import BernoulliNB\n",
+    "dimensions = [10, 50, 100]\n",
+    "\n",
+    "bayes_classifier = BernoulliNB()\n",
     "\n",
     "print(\"Bag of Words\\n\")\n",
     "pca2 = PCA(X_train)\n",
@@ -405,13 +477,6 @@
     "    bayes_score = bayes_classifier.score(new_test, testing['labels'])*100\n",
     "    print(\"Bayes Classifier: \", bayes_score, '%')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
